--- a/PizzaBuilder/.settings/org.eclipse.wst.common.component
+++ b/PizzaBuilder/.settings/org.eclipse.wst.common.component
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="Mod3Lab">
+    <wb-module deploy-name="PizzaBuilder">
         <wb-resource deploy-path="/" source-path="/WebContent"/>
-        <property name="context-root" value="Mod3Lab"/>
+        <property name="context-root" value="PizzaBuilder"/>
     </wb-module>
 </project-modules>
